--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         background: #088a29;
       }
 
+      .game-container:focus {
+        outline: 1px solid red;
+      }
+
       .card {
         position: absolute;
 
