More little fixes
- selection after a successful move
- make the two states look different

--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
         border: 2px dashed #333;
       }
 
-      .selected {
+      .selection {
+        outline: 3px dashed yellow;
+        background-color: transparent;
+        position: absolute;
+      }
+
+      .selection-fixed {
         outline: 3px solid yellow;
       }
     </style>
